fiz um pouquinho de css e deu certo o put e o delete ;)

--- a/html/site.html
+++ b/html/site.html
@@ -1,7 +1,18 @@
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="site.css">
+        <title>DevSchool</title>
+    </head>
+    <body>
+
+
 <div class="mae">
     <div class="lado-esquerdo">
         <div class="cabecalho">
-            <div class="logo"></div>
+            <div class="logo"><img src="/public/assets/images/book.svg"/></div>
             <div class="nome"><span>Dev</span>School</div>
         </div>
         <div class="barra"></div>
@@ -68,98 +79,104 @@
                 <div class="barraR"><img src="/public/assets/images/linR.svg"/></div>
                 <div class="titulo">Alunos Matriculados</div>
             </div>
-            <div class="tabela">
-                <div class="campos">
-                    <div class="c">ID</div>
-                    <div class="c">Nome</div>
-                    <div class="c">Chamada</div>
-                    <div class="c">Turma</div>
-                    <div class="c">Curso</div>
-                </div>
-                <div class="resultados">
-                    <div>1</div>
-                    <div>Fulano da silva</div>
-                    <div>4</div>
-                    <div>InfoC</div>
-                    <div>Informática</div>
-                    <div class="alterar">
+            <table class="tabela">
+                <thead>
+                  <tr class="campos">
+                    <th>ID</th>
+                    <th>Nome</th>
+                    <th>Chamada</th>
+                    <th>Turma</th>
+                    <th>Curso</th>
+                  </tr>
+                </thead>
+                <tbody>
+                <tr class="resultados">
+                    <td>1</td>
+                    <td>Heloysa</td>
+                    <td>4</td>
+                    <td>InfoC</td>
+                    <td>Informática</td>
+                    <td class="alterar">
                         <button>
                             <img src="/public/assets/images/alterar (2).svg"/>
                         </button>
-                    </div>
-                    <div class="excluir">
+                    </td>
+                    <td class="excluir">
                         <button>
                             <img src="/public/assets/images/excluir.svg"/>
                         </button>
-                    </div>
-                </div>
-                <div class="resultados2">
-                    <div>2</div>
-                    <div>Fulano da silva</div>
-                    <div>5</div>
-                    <div>InfoC</div>
-                    <div>Informática</div>
-                </div>
-                <div class="resultados">
-                    <div>3</div>
-                    <div>Fulano da silva</div>
-                    <div>6</div>
-                    <div>InfoC</div>
-                    <div>Informática</div>
-                </div>
-                <div class="resultados2">
-                    <div>4</div>
-                    <div>Fulano da silva</div>
-                    <div>7</div>
-                    <div>InfoC</div>
-                    <div>Informática</div>
-                </div>
-                <div class="resultados">
-                    <div>5</div>
-                    <div>Fulano da silva</div>
-                    <div>8</div>
-                    <div>InfoC</div>
-                    <div>Informática</div>
-                </div>
-                <div class="resultados2">
-                    <div>6</div>
-                    <div>Fulano da silva</div>
-                    <div>9</div>
-                    <div>InfoC</div>
-                    <div>Informática</div>
-                </div>
-                <div class="resultados">
-                    <div>7</div>
-                    <div>Fulano da silva</div>
-                    <div>10</div>
-                    <div>InfoC</div>
-                    <div>Informática</div>
-                </div>
-                <div class="resultados2">
-                    <div>8</div>
-                    <div>Fulano da silva</div>
-                    <div>11</div>
-                    <div>InfoC</div>
-                    <div>Informática</div>
-                </div>
-                <div class="resultados">
-                    <div>9</div>
-                    <div>Fulano da silva</div>
-                    <div>12</div>
-                    <div>InfoC</div>
-                    <div>Informática</div>
-                </div>
-                <div class="resultados2">
-                    <div>10</div>
-                    <div>Fulano da silva</div>
-                    <div>13</div>
-                    <div>InfoC</div>
-                    <div>Informática</div>
-                </div>
+                    </td>
+                </tr>
+                </tbody>
+                <tbody>
+                <tr class="resultados2">
+                    <td>2</td>
+                    <td>Fulano da silva</td>
+                    <td>5</td>
+                    <td>InfoC</td>
+                    <td>Informática</td>
+                </tr>
+                </tbody>
+                <tbody>
+                <tr class="resultados">
+                    <td>3</td>
+                    <td>Fulano da silva</td>
+                    <td>6</td>
+                    <td>InfoC</td>
+                    <td>Informática</td>
+                </tr>
+                </tbody>
+                <tbody>
+                <tr class="resultados2">
+                    <td>4</td>
+                    <td>Fulano da silva</td>
+                    <td>7</td>
+                    <td>InfoC</td>
+                    <td>Informática</td>
+                </tr>
+                </tbody>
+                <tbody>
+                <tr class="resultados">
+                    <td>5</td>
+                    <td>Fulano da silva</td>
+                    <td>8</td>
+                    <td>InfoC</td>
+                    <td>Informática</td>
+                </tr>
+                </tbody>
+                <tbody>
+                <tr class="resultados2">
+                    <td>6</td>
+                    <td>Fulano da silva</td>
+                    <td>9</td>
+                    <td>InfoC</td>
+                    <td>Informática</td>
+                </tr>
+                </tbody>
+                <tbody>
+                <tr class="resultados">
+                    <td>7</td>
+                    <td>Fulano da silva</td>
+                    <td>10</td>
+                    <td>InfoC</td>
+                    <td>Informática</td>
+                </tr>
+               </tbody>
+               <tbody>
+                <tr class="resultados2">
+                    <td>8</td>
+                    <td>Fulano da silva</td>
+                    <td>11</td>
+                    <td>InfoC</td>
+                    <td>Informática</td>
+                </tr>
+              </tbody>
                 
-            </div>
+            </table>
         </div>
     </div>
 
 
 </div>
+</body>
+</html>
