quase terminei o css

--- a/html/site.html
+++ b/html/site.html
@@ -1,4 +1,9 @@
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+</style>
+
 <html>
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +13,14 @@
     </head>
     <body>
 
-
 <div class="mae">
     <div class="lado-esquerdo">
         <div class="cabecalho">
             <div class="logo"><img src="/public/assets/images/book.svg"/></div>
             <div class="nome"><span>Dev</span>School</div>
         </div>
-        <div class="barra"></div>
-        <div class="especificações">
+        <div class="barra">:|</div>
+        <div class="especificacoes">
             <div class="opcao">Gerenciamento</div>
             <div class="setinha"><img src="/public/assets/images/setinha.svg"/></div>
         </div>
@@ -46,12 +50,12 @@
         <div class="pt2">
             <div class="descricao">
                 <div class="barraR"><img src="/public/assets/images/linR.svg"/></div>
-                <div class="titulo">Novo Aluno</div>
+                <div class="titulo"><b>Novo Aluno</b></div>
             </div>
             <div class="conteudo">
                 <div class="lado1">
                     <div class="pri">
-                        <div class="n">Nome:</div>
+                        <div class="no">Nome:</div>
                         <input type="text">
                     </div>
                     <div class="seg">
@@ -75,9 +79,9 @@
             </div>
         </div>
         <div class="pt3">
-            <div class="descricao">
-                <div class="barraR"><img src="/public/assets/images/linR.svg"/></div>
-                <div class="titulo">Alunos Matriculados</div>
+            <div class="descricao2">
+                <div class="barraR2"><img src="/public/assets/images/linR.svg"/></div>
+                <div class="titulo2"><b>Alunos Matriculados</b></div>
             </div>
             <table class="tabela">
                 <thead>
